Fix z-index on bios

--- a/styles/about.css
+++ b/styles/about.css
@@ -92,7 +92,6 @@ h3>span {
 
 
 .hvrbox-text {
-	z-index: 99;
 	opacity: 0;
 	transform: translateY(30px);
 	position: absolute;
